varargs mock constructor; various minor refactors